--- a/Chords.Android/Views/ShowChordView.cshtml
+++ b/Chords.Android/Views/ShowChordView.cshtml
@@ -18,13 +18,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span class="navbar-brand">Show Chord</span>
+                <span class="navbar-brand">Show chord chart</span>
             </div>
                 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
-                    <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
+                    <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord chart</a></li>
+                    <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord name</a></li>
 					<li><a href="hybrid:Circle?conv=@Model.conv">Circle of fifths</a></li>
 					<li><a href="hybrid:FavoriteChords?conv=@Model.conv">Favourite chords</a></li>
                 </ul>
