--- a/Chords.Android/Views/FavoriteChordsView.cshtml
+++ b/Chords.Android/Views/FavoriteChordsView.cshtml
@@ -25,8 +25,8 @@
                 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord</a></li>
-                    <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord</a></li>
+                    <li><a href="hybrid:ShowChord?conv=@Model.conv">Show chord chart</a></li>
+                    <li><a href="hybrid:FindChord?conv=@Model.conv">Find chord name</a></li>
                     <li><a href="hybrid:Circle?conv=@Model.conv">Circle of fifths</a></li>
                     <li><a href="hybrid:FavoriteChords?conv=@Model.conv">Favourite chords</a></li>
                 </ul>
