--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -31,6 +31,11 @@ textarea {
     max-width: 280px;
 }
 
+.other-chords {
+    float: right;
+    text-align: right;
+}
+
 .chordlayout {
     font-size: 0.9em;
     font-weight: bold;
