--- a/Chords.Android/Views/FindChordView.cshtml
+++ b/Chords.Android/Views/FindChordView.cshtml
@@ -75,7 +75,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-strict-collapse">
-                        <span class="sr-only">Toggle naming convention</span>
+                        <span class="sr-only">Toggle mode</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
