--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -1,17 +1,4 @@
-﻿/* This is a minimal style sheet intended to demonstrate how to include 
-   static content in your hybrid app.  Other static content, such as 
-   javascript files and images, can be included in this same folder
-   (Resources on iOS or Assets on Android), with the same Build Action 
-   (BundleResource on iOS or AndroidAsset on Android), to be accessible 
-   from a path starting at the root of your hybrid application.  */
-/*
-input {
-    width: 100%;
-}
-*/
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿body {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -24,11 +11,24 @@ body {
     padding-bottom: 30px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
+nav {
+    position: relative;
+}
+
+.vertical-align {
+    display: flex;
+    flex-direction: row;
+}
+
+.vertical-align > [class^="col-"],
+.vertical-align > [class*="col-"] {
+    display: flex;
+    align-items: center;
+    /*justify-content: center; /* Optional, to align inner items horizontally inside the column */
+}
+
+span .toggle {
+    float: right;
 }
 
 .other-chords {
@@ -153,6 +153,99 @@ form select {
     }
 }
 
+/**/
+input[type=range] {
+    height: 38px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%!important;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%!important;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    /*box-shadow: 1px 1px 1px #000000;*/
+    background: #3071A9;
+    border-radius: 5px;
+    border: 1px solid #3071A9;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    /*box-shadow: 1px 1px 1px #000000;*/
+    border: 1px solid #3071A9;
+    /*
+    height: 30px;
+    width: 15px;
+    border-radius: 5px;
+    */
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -11px;
+}
+    
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #3071A9;
+}
+
+.badge-inverse {
+    background-color: #222222 !important;
+    border-color: #080808 !important;
+}
+/*
+input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
+    margin: 0 auto;
+}
+
+.badge {
+    margin-right: 16px;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 10px;
+    background-color: #aaaaaa;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a8a8a8), to(#acacac));
+    background-image: -webkit-linear-gradient(top, #a8a8a8, #acacac);
+    background-image: linear-gradient(to bottom, #a8a8a8, #acacac);
+    background-repeat: repeat-x;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+
+input[type=range]:focus {
+    outline: 1px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: 0px solid transparent;
+    height: 20px;
+    width: 20px;
+    margin-top: -5px;
+    border-radius: 20px;
+    background: #0e90d2;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background-image: -webkit-linear-gradient(top, #149bdf, #0480be);
+    background-repeat: repeat-x;
+    opacity: 0.8;
+}
+*/
 footer {
     position: fixed;
     bottom: 0;
