--- a/Chords.Android/Views/ShowChordLayoutsView.cshtml
+++ b/Chords.Android/Views/ShowChordLayoutsView.cshtml
@@ -4,8 +4,8 @@
 @model Chords.Android.Models.ShowChordLayoutsModel
 @{
     var otherSymbols = Model.ChordDecorator != null ? Model.ChordDecorator.Symbols.Skip(1) : new string[0];
-    var allRoots = Model.Parameters["roots"]?.Split(',');
-    var allChordTypes = Model.Parameters["types"]?.Split(',');
+    var allRoots = Model.AllRoots != null ? string.Join(",", Model.AllRoots.Select(i => i.ToString())) : string.Empty;
+    var allChordTypes = Model.AllChordTypes != null ? string.Join(",", Model.AllChordTypes) : string.Empty;
 }
 <!DOCTYPE html>
 <html>
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,10 +29,11 @@
                 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="hybrid:ShowChord?conv=@Model.Parameters["conv"]">Show chord chart</a></li>
-                    <li><a href="hybrid:FindChord?conv=@Model.Parameters["conv"]">Find chord name</a></li>
-					<li><a href="hybrid:Circle?conv=@Model.Parameters["conv"]">Circle of fifths</a></li>
-					<li><a href="hybrid:FavoriteChords?conv=@Model.Parameters["conv"]">Favourite chords</a></li>
+                    <li><a href="hybrid:ShowChord">Show chord chart</a></li>
+                    <li><a href="hybrid:FindChord">Find chord name</a></li>
+                    <li><a href="hybrid:FavoriteChords">Favourite chords</a></li>
+                    <li><a href="hybrid:Circle">Circle of fifths</a></li>
+                    <li><a href="hybrid:Settings">Settings</a></li>
                 </ul>
             </div>
         </div>
@@ -43,12 +44,12 @@
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
 
         <!-- Main content start -->
-        @if (allRoots!= null && allRoots.Length > 1)
+        @if (Model.AllRoots!= null && Model.AllRoots.Length > 1)
         {
             @(new HtmlString("<h4 class=\"other-chords\">Chords found:\n"))
-            for(var i = 0; i < allRoots.Length; i++)
+            for(var i = 0; i < Model.AllRoots.Length; i++)
             {
-                <a href="hybrid:ShowChord?root=@(allRoots[i])&type=@(allChordTypes[i])&roots=@(Model.Parameters["roots"])&types=@(Model.Parameters["types"])&partial=@(Model.Parameters["partial"])&special=@(Model.Parameters["special"])&conv=@(Model.Parameters["conv"])">@(allRoots[i])@(allChordTypes[i])</a>
+                <a href="hybrid:ShowChordResults?root=@(Model.AllRoots[i])&type=@(Model.AllChordTypes[i])&roots=@(allRoots)&types=@(allChordTypes)&partial=@(Model.AllowPartial)&special=@(Model.AllowSpecial)&conv=@(Model.conv)">@(Model.AllRoots[i].ToString(Model.conv))@(Model.AllChordTypes[i])</a>
             }
             @(new HtmlString("\n</h4>\n"))
         }
@@ -84,7 +85,7 @@
 	        <div id="layouts" class="animate-bottom">
 	        @if (Model.Layouts != null)
 	        {
-	            <h4>Chord layouts:</h4>
+	            <h4>Chord diagrams:</h4>
 	            <p>
 	                @Model.Layouts.Length results
 	                @foreach(var layout in Model.Layouts)
@@ -125,7 +126,7 @@
 	                            data: {
 					                root: '@Model.ChordDecorator.Root',
 					                type: '@Model.ChordDecorator.ChordType.ToDescription()',
-					                conv: '@Model.Parameters["conv"]',
+					                conv: '@Model.conv',
 					                positions: positions
 	                            }
 	                        });
