--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -24,7 +24,18 @@ nav {
 .vertical-align > [class*="col-"] {
     display: flex;
     align-items: center;
-    /*justify-content: center; /* Optional, to align inner items horizontally inside the column */
+}
+
+.vertical-align > .justify-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vertical-align > .justify-right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 span .toggle {
