--- a/Chords.Android/Views/CircleView.cshtml
+++ b/Chords.Android/Views/CircleView.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="bootstrap-toggle.min.css" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -28,7 +28,7 @@
                     <li><a href="hybrid:ShowChord">Show chord chart</a></li>
                     <li><a href="hybrid:FindChord">Find chord name</a></li>
                     <li><a href="hybrid:FavoriteChords">Favourite chords</a></li>
-                    <li><a href="hybrid:Circle&index=@Model.index">Circle of fifths</a></li>
+                    <li><a href="hybrid:Circle?index=@Model.index">Circle of fifths</a></li>
                     <li><a href="hybrid:Settings">Settings</a></li>
                 </ul>
             </div>
@@ -40,28 +40,6 @@
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
 
         <!-- Main content start -->
-        <nav class="navbar navbar-inverse">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-conv-collapse">
-                        <span class="sr-only">Toggle naming convention</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <span class="navbar-brand" id="navbar-conv">@(Model.conv.ToDescription())</span>
-                </div>
-                    
-                <div class="navbar-conv-collapse collapse">
-                    <ul class="nav navbar-nav">
-                    @foreach(var conv in @Model.NamingConventions)
-                    {
-                        <li><a href="hybrid:Circle?conv=@conv">@(conv.ToDescription())</a></li>
-                    }
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <div class="error">@Model.Error</div>
 		<div style="text-align: center;">
 			<svg class="circle-svg" width="320" height="320">
