--- a/Chords.Android/Views/SettingsView.cshtml
+++ b/Chords.Android/Views/SettingsView.cshtml
@@ -82,10 +82,10 @@
                 </div>
             </div>
         </nav>
-		<div class="row">
+		<div class="row vertical-align">
             <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">Highest fret:</div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <div id="maxfret-badge" class="badge badge-inverse pull-right">@Model.maxFret</div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 justify-right">
+                <div id="maxfret-badge" class="badge badge-inverse">@Model.maxFret</div>
             </div>
 		</div>
         <div class="row">
@@ -93,9 +93,9 @@
                 <input type="range" id="maxfret" value="@Model.maxFret" min="1" max="15" step="1" />
 			</div>
         </div>
-        <div class="row" style="margin-bottom: 20px;">
+        <div class="row vertical-align" style="margin-bottom: 20px;">
             <span class="col-xs-9 col-sm-9 col-md-9 col-lg-9">Allow barre chords</span>
-			<span class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+			<span class="col-xs-3 col-sm-3 col-md-3 col-lg-3 justify-right">
             @if (Model.AllowBarre)
             {
                 <input type="checkbox" id="barre" name="barre" value="true" data-toggle="toggle" data-on="Yes" data-off="No" checked="checked" style="display: none;" />
@@ -106,9 +106,9 @@
             }
 			</span>
         </div>
-        <div class="row" style="margin-bottom: 20px;">
+        <div class="row vertical-align" style="margin-bottom: 20px;">
             <span class="col-xs-9 col-sm-9 col-md-9 col-lg-9">Allow chords with muted high strings</span>
-            <span class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <span class="col-xs-3 col-sm-3 col-md-3 col-lg-3 justify-right">
 			@if (Model.AllowSpecial)
 			{
                 <input type="checkbox" id="special" name="special" value="true" data-toggle="toggle" data-on="Yes" data-off="No" checked="checked" style="display: none;" />
