--- a/Chords.Android/Views/ShowChordView.cshtml
+++ b/Chords.Android/Views/ShowChordView.cshtml
@@ -86,9 +86,9 @@
 			<input type="hidden" name="root" id="root" value="@(Model.Root?.ToString(Model.conv) ?? Model.Notes[1].ToString())" />
             <input type="hidden" name="type" id="type" value="@(Model.ChordType.ToDescription() ?? string.Empty)" />
 			<input type="hidden" name="conv" id="conv" value="@Model.conv" />
-			<div class="row" style="margin-bottom: 20px">
+			<div class="row vertical-align" style="margin-bottom: 20px">
 				<span class="col-xs-9 col-sm-9 col-md-9 col-lg-9">Allow partial chords</span>
-				<span class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+				<span class="col-xs-3 col-sm-3 col-md-3 col-lg-3 justify-right">
 	                <input type="checkbox" name="partial" value="true" data-toggle="toggle" data-on="Yes" data-off="No" checked="checked" />
 				</span>
             </div>
