--- a/Chords.Android/Assets/style.css
+++ b/Chords.Android/Assets/style.css
@@ -111,6 +111,55 @@ form select {
     display: inherit;
 }
 
+.chord-layout {
+    /*border: 1px solid red;*/
+    float: left;
+    padding: 10px;
+}
+
+/* Large desktop */
+@media (min-width: 1280px) {
+    .chord-layout {
+        width: 12.5%;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1279px) {
+    .chord-layout {
+        width: 16.66666667%;
+    }
+}
+
+/* Landscape tablet */
+@media (min-width: 980px) and (max-width: 1199px) {
+    .chord-layout {
+        width: 16.66666667%;
+    }
+}
+
+/* Portrait tablet */
+@media (min-width: 768px) and (max-width: 979px) {
+    .chord-layout {
+        width: 25%;
+        padding: 20px;
+    }
+}
+
+/* Landscape phone */
+@media (max-width: 767px) {
+    .chord-layout {
+        /*width: 33.33333333%;*/
+        width: 25%;
+    }
+}
+
+/* Portrait phone */
+@media (max-width: 480px) {
+    .chord-layout {
+        width: 50%;
+    }
+}
+
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
@@ -212,51 +261,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     background-color: #222222 !important;
     border-color: #080808 !important;
 }
-/*
-input[type=range] {
-    -webkit-appearance: none;
-    width: 100%;
-    background: transparent;
-    margin: 0 auto;
-}
 
-.badge {
-    margin-right: 16px;
-}
-
-input[type='range']::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 10px;
-    background-color: #aaaaaa;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a8a8a8), to(#acacac));
-    background-image: -webkit-linear-gradient(top, #a8a8a8, #acacac);
-    background-image: linear-gradient(to bottom, #a8a8a8, #acacac);
-    background-repeat: repeat-x;
-    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-}
-
-input[type=range]:focus {
-    outline: 1px;
-}
-
-input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    border: 0px solid transparent;
-    height: 20px;
-    width: 20px;
-    margin-top: -5px;
-    border-radius: 20px;
-    background: #0e90d2;
-    cursor: pointer;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background-image: -webkit-linear-gradient(top, #149bdf, #0480be);
-    background-repeat: repeat-x;
-    opacity: 0.8;
-}
-*/
 footer {
     position: fixed;
     bottom: 0;
