--- a/Chords.Android/Views/ShowChordLayoutsView.cshtml
+++ b/Chords.Android/Views/ShowChordLayoutsView.cshtml
@@ -92,7 +92,7 @@
 	                {
 					    var positions = string.Join(",", layout.IntPositions.Select(i => i.ToString()).ToArray());
 					
-	                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 chord-layout" data-favorite="@(layout.Favorite)" data-positions="@positions" onclick="playChord('@positions');">
+	                    <div class="chord-layout" data-favorite="@(layout.Favorite)" data-positions="@positions" onclick="playChord('@positions');">
 	                        @(layout.Schema)
 	                    </div>
 	                }
