--- a/Chords.Android/Views/ShowChordView.cshtml
+++ b/Chords.Android/Views/ShowChordView.cshtml
@@ -1,4 +1,4 @@
-﻿﻿﻿@inherits PortableRazor.ViewBase
+﻿﻿@inherits PortableRazor.ViewBase
 @using Chords.Core.Extensions
 @model Chords.Android.Models.ShowChordModel
 <!DOCTYPE html>
