Main navigation is now fixed on top of every page

--- a/Chords.Android/Views/FindChordView.cshtml
+++ b/Chords.Android/Views/FindChordView.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@inherits PortableRazor.ViewBase
+﻿﻿﻿@inherits PortableRazor.ViewBase
 @using System.Text.RegularExpressions
 @using PortableRazor.Web.Mvc
 @using Chords.Core.Extensions
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="bootstrap-toggle.min.css" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -43,7 +43,7 @@
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
 
 		<!-- Main content start -->
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse" style="margin-top:40px;">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-strict-collapse">
@@ -54,18 +54,18 @@
                     </button>
 					@if (Model.Strict)
 					{
-                        <span class="navbar-brand" id="navbar-strict">Strict mode (@Model.Notes[1].ToString(Model.conv)<sub>#</sub> ≠ @Model.Notes[4].ToString(Model.conv)<sub>b</sub>)</span>
+                        <span class="navbar-brand" id="navbar-strict">Strict mode (@Model.Notes[0].ToString(Model.conv)<sub>#</sub> ≠ @Model.Notes[3].ToString(Model.conv)<sub>b</sub>)</span>
 					}
 					else
 					{
-                        <span class="navbar-brand" id="navbar-strict">Loose mode (@Model.Notes[1].ToString(Model.conv)<sub>#</sub> = @Model.Notes[4].ToString(Model.conv)<sub>b</sub>)</span>
+                        <span class="navbar-brand" id="navbar-strict">Loose mode (@Model.Notes[0].ToString(Model.conv)<sub>#</sub> = @Model.Notes[3].ToString(Model.conv)<sub>b</sub>)</span>
 					}
                 </div>
                     
                 <div class="navbar-strict-collapse collapse">
                     <ul class="nav navbar-nav">
-						<li><a href="hybrid:FindChord?conv=@Model.conv&strict=true&note=@notes">Strict mode (@Model.Notes[1].ToString(Model.conv)<sub>#</sub> ≠ @Model.Notes[4].ToString(Model.conv)<sub>b</sub>)</a></li>
-                        <li><a href="hybrid:FindChord?conv=@Model.conv&strict=false&note=@notes">Loose mode (@Model.Notes[1].ToString(Model.conv)<sub>#</sub> = @Model.Notes[4].ToString(Model.conv)<sub>b</sub>)</a></li>
+						<li><a href="hybrid:FindChord?conv=@Model.conv&strict=true&note=@notes">Strict mode (@Model.Notes[0].ToString(Model.conv)<sub>#</sub> ≠ @Model.Notes[3].ToString(Model.conv)<sub>b</sub>)</a></li>
+                        <li><a href="hybrid:FindChord?conv=@Model.conv&strict=false&note=@notes">Loose mode (@Model.Notes[0].ToString(Model.conv)<sub>#</sub> = @Model.Notes[3].ToString(Model.conv)<sub>b</sub>)</a></li>
                     </ul>
                 </div>
             </div>
