--- a/Chords.Android/Views/ShowChordResultView.cshtml
+++ b/Chords.Android/Views/ShowChordResultView.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -39,7 +39,7 @@
     </nav>
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content" style="display:none;">
 
 		<!-- Main content start -->
 		@if (Model.AllRoots!= null && Model.AllRoots.Length > 1)
@@ -85,6 +85,7 @@
 			<div id="loader"></div>
 			<script>
 				$(document).ready(function (){
+				    $('.main-content').show();
 	                $.ajax({
 	                    url: 'hybrid:ShowChordLayouts',
 	                    type: 'get',
