--- a/Chords.Android/Views/FavoriteChordsView.cshtml
+++ b/Chords.Android/Views/FavoriteChordsView.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
