--- a/Chords.Android/Views/SettingsView.cshtml
+++ b/Chords.Android/Views/SettingsView.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="bootstrap-toggle.min.css" />		
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -39,7 +39,7 @@
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-content">
 
         <!-- Main content start -->
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse" style="margin-top:20px;">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-conv-collapse">
